# rust-mcp-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  mcp_config.template.yml
.github/: CODEOWNERS
benches/: request_hotpath_baseline.rs  runtime_split_lock_baseline.rs  runtime_startup_ownership_baseline.rs
docs/: AI_CLIENT_COMPATIBILITY.md  AUTH.md  CONFIG_RELOAD.md  CONFIG_SCHEMA.md  PLUGINS.md  TASKS.md  TRANSPORT.md  TROUBLESHOOTING.md
examples/: README.md
examples/_shared/: mock_harness.rs
examples/auth-all-mode/: README.md  main.rs
examples/auth-all-mode/config/: mcp_config.yml
examples/auth-bearer/: README.md  main.rs
examples/auth-bearer/config/: mcp_config.yml
examples/auth-oauth-introspection/: README.md  main.rs
examples/auth-oauth-introspection/config/: mcp_config.yml
examples/auth-oauth-jwt/: README.md  main.rs
examples/auth-oauth-jwt/config/: mcp_config.yml
examples/core-minimal/: README.md  main.rs
examples/core-minimal/config/: mcp_config.yml
examples/plugins-auth-custom/: README.md  main.rs  plugin.rs
examples/plugins-auth-custom/config/: mcp_config.yml
examples/plugins-router-http/: README.md  main.rs  plugin.rs
examples/plugins-router-http/config/: mcp_config.yml
examples/plugins-simple-outbound-http/: README.md  main.rs  plugin.rs
examples/plugins-simple-outbound-http/config/: mcp_config.yml
examples/plugins-tool-client-features/: README.md  main.rs  plugin.rs
examples/plugins-tool-client-features-advanced/: README.md  main.rs  plugin.rs
examples/plugins-tool-client-features-advanced/config/: mcp_config.yml
examples/plugins-tool-client-features/config/: mcp_config.yml
examples/plugins-tool-custom/: README.md  main.rs  plugin.rs
examples/plugins-tool-custom/config/: mcp_config.yml
examples/plugins-tool-filesystem/: README.md  main.rs  plugin.rs
examples/plugins-tool-filesystem/config/: mcp_config.yml
examples/plugins-tool-oauth-helper/: README.md  main.rs  plugin.rs
examples/plugins-tool-oauth-helper/config/: mcp_config.yml
examples/prompts-inline-plugin/: README.md  main.rs  plugin.rs
examples/prompts-inline-plugin/config/: mcp_config.yml
examples/resources-inline-plugin/: README.md  main.rs  plugin.rs
examples/resources-inline-plugin/config/: mcp_config.yml
examples/resources-subscribe-updated/: README.md  main.rs  plugin.rs
examples/resources-subscribe-updated/config/: mcp_config.yml
examples/tools-crud-http/: README.md  main.rs
examples/tools-crud-http/config/: mcp_config.yml
examples/tools-http-post/: README.md  main.rs
examples/tools-http-post/config/: mcp_config.yml
examples/tools-output-modes/: README.md  main.rs
examples/tools-output-modes/config/: mcp_config.yml
examples/tools-rich-content/: README.md  main.rs
examples/tools-rich-content/config/: mcp_config.yml
examples/tools-templating/: README.md  main.rs
examples/tools-templating/config/: mcp_config.yml
examples/tools-upstream-auth/: README.md  main.rs
examples/tools-upstream-auth/config/: mcp_config.yml
examples/tools-web-search/: README.md  main.rs
examples/tools-web-search/config/: mcp_config.yml
examples/utility-cancellation/: README.md  main.rs  plugin.rs
examples/utility-cancellation/config/: mcp_config.yml
examples/utility-completion/: README.md  main.rs  plugin.rs
examples/utility-completion/config/: mcp_config.yml
examples/utility-list-changed/: README.md  main.rs
examples/utility-list-changed/config/: mcp_config.yml  mcp_config_reload.yml
examples/utility-logging/: README.md  main.rs  plugin.rs
examples/utility-logging/config/: mcp_config.yml
examples/utility-pagination/: README.md  main.rs
examples/utility-pagination/config/: mcp_config.yml
examples/utility-progress/: README.md  main.rs  plugin.rs
examples/utility-progress/config/: mcp_config.yml
examples/utility-tasks/: README.md  main.rs  plugin.rs
examples/utility-tasks-advanced/: README.md  main.rs  plugin.rs
examples/utility-tasks-advanced/config/: mcp_config.yml
examples/utility-tasks/config/: mcp_config.yml
src/: auth.rs  config.rs  engine.rs  errors.rs  http.rs  inline_test_fixtures.rs  lib.rs  log_safety.rs  mcp.rs  plugins.rs  rmcp_internal.rs  runtime.rs  utils.rs
src/auth/: disabled.rs  inbound.rs  oauth.rs  outbound.rs
src/auth/inbound/: authorization.rs  claims.rs  factory.rs  middleware.rs  token.rs  (+1 more)
src/config/: feature_validation.rs  json_schema.rs  loader.rs  types.rs
src/engine/: client_notifications.rs  completion.rs  feature_validation.rs  handler.rs  http_executor.rs  orchestration.rs  pagination.rs  prompts.rs  resources.rs  schema_argument_validation.rs  schema_validator_cache.rs  tasks.rs  templating.rs  tool_builders.rs  tool_response.rs  value_helpers.rs
src/http/: client.rs  hardening.rs  outbound_pipeline.rs  policy.rs  router.rs  server.rs
src/plugins/: context.rs  http_router.rs  logging.rs  progress.rs  registry.rs  traits.rs
src/runtime/: core.rs  list_cache.rs  runtime_checks.rs
tests/: auth_inbound_factory.rs  auth_inbound_provider.rs  auth_inbound_state.rs  config_json_schema.rs  config_loader.rs  config_loader_aliases.rs  config_loader_errors.rs  config_types_accessors.rs  config_upstream_auth.rs  e2e_cancellation.rs  e2e_client_features.rs  e2e_completion.rs  e2e_core.rs  e2e_errors.rs  e2e_logging.rs  e2e_progress.rs  e2e_prompts.rs  e2e_resources.rs  e2e_tasks.rs  e2e_tools.rs  engine_cancellation.rs  engine_client_features.rs  engine_completion.rs  engine_feature_gates.rs  engine_handler_server_info.rs  engine_handler_tool_requests.rs  engine_handler_utility_requests.rs  engine_http_errors.rs  engine_http_executor.rs  engine_logging.rs  engine_orchestration_construction.rs  engine_orchestration_errors.rs  engine_orchestration_tool_dispatch.rs  engine_pagination.rs  engine_progress.rs  engine_prompts.rs  engine_resources.rs  engine_rich_content_blocks.rs  engine_tasks.rs  engine_templating.rs  (+14 more)
tests/auth_common/: mod.rs
tests/config_common/: mod.rs
tests/e2e_common/: mod.rs
tests/engine_common/: mod.rs
(+266 files in other folders)
